updated css formatting, fixed alignment of ol items, formatted columns in index handlebars

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -8,8 +8,22 @@ img.displayed {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    padding: 10px;
 }
 
 h1 {
     text-align: center;
+    color: rgb(161, 13, 13);
 }
+
+h3 {
+    text-align: center;
+    color: rgb(161, 13, 13);
+}
+
+li {
+    text-align: center;
+    padding-left: 0;
+    list-style-position: inside;
+}
+
